--- a/package.json
+++ b/package.json
@@ -2,15 +2,31 @@
   "name": "my-music",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
+    "antd-mobile": "^2.2.8",
+    "axios": "^0.18.0",
+    "babel-plugin-import": "^1.11.0",
+    "better-scroll": "^1.13.4",
+    "classnames": "^2.2.6",
+    "history": "^4.7.2",
+    "node-sass": "^4.11.0",
+    "prop-types": "^15.6.2",
     "react": "^16.7.0",
+    "react-app-rewired": "2.0.2-next.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-redux": "^6.0.0",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.3",
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "sass-loader": "^7.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -21,5 +37,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "babel-plugin-import": "^1.11.0",
+    "react-app-rewired": "2.0.2-next.0"
+  }
 }
